# togglsync

./: .dockerignore  .env.example  DEPLOY.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: settings.py  urls.py
scripts/: entrypoint.sh  generate_api.sh  generate_server.sh  togglsync.container  tunnel-togglsync.container
sync/: admin.py  apps.py  models.py  signals.py  tasks.py  urls.py  utils.py  views.py
sync/management/commands/: create_user.py  initial_sync.py  setup_google.py  sync_metadata.py
sync/migrations/: 0001_initial.py  0002_alter_googlecal_unique_together_and_more.py  0003_entitycolormapping.py
sync/services/: __init__.py  gcal.py  resolver.py  toggl.py
sync/templates/: admin_user_credentials.html  privacy_policy.html  terms_of_service.html  user_dashboard.html
sync/tests/: __init__.py  test_google_auth_refresh.py  test_tasks.py  test_webhook.py
tests/: log.py  quickstart.py  toggl_webhooks.py
