[tool.poetry]
name = "togglsync"
version = "0.1.0"
description = ""
authors = ["Ayoub Ghriss <dev@ayghri.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
google-api-python-client = "^2.149.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.1"
websockets = "^13.1"
requests = "^2.32.3"
python-dateutil = "^2.9.0.post0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
